[project]
name = "fimama"
version = "0.2.0"
description = "Fictional Map Maker"
readme = "README.md"
authors = [
    { name = "Pertti Palo", email = "giuthas@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "icecream>=2.1.9",
    "matplotlib>=3.10.8",
    "noise>=1.2.2",
    "numpy>=2.4.1",
    "pylint-venv>=3.0.4",
    "pyqt6>=6.10.2",
    "scipy>=1.17.0",
]

[project.scripts]
fimama = "fimama:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pylint.MAIN]
init-hook = """
try: import pylint_venv
except ImportError: pass
else: pylint_venv.inithook()
"""
