[project]
name = "fimama"
version = "0.6.0"
description = "Fictional Map Maker"
readme = "README.md"
authors = [
    { name = "Pertti Palo", email = "giuthas@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "click-default-group>=1.2.4",
    "matplotlib>=3.10.8",
    "noise>=1.2.2",
    "numpy>=2.4.1",
    "pydantic>=2.12.5",
    "pyqt6>=6.10.2",
    "pyyaml>=6.0.3",
    "scipy>=1.17.0",
]

[project.scripts]
fimama = "fimama:run_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "icecream>=2.1.10",
    "licenseheaders>=0.8.8",
    "pdoc>=16.0.0",
]
